Overlapping tags in Case Management/Rules fixed (#4919)
* Overlapping tags in Case Management/Rules fixed

* Run npm run prepare

* formatting fixed

--- a/phytoplankton-console/src/pages/rules/my-rules/style.module.less
+++ b/phytoplankton-console/src/pages/rules/my-rules/style.module.less
@@ -46,6 +46,11 @@
     width: 200px;
   }
 }
+.tag {
+  display: flex;
+  gap: 4px;
+  flex-wrap: wrap;
+}
 
 @media screen and (max-width: @screen-sm) {
   .stepDescription {
